@@ -13,6 +13,7 @@ Bugfixes:
   algorithm and length
 * OPENDNSSEC-397: Change "hsmutil list" output so that the table header goes 
   to stdout not stderr
+* OPENDNSSEC-445: ods-ksmutil: Clean up of hsm connection handling
 
 
 OpenDNSSEC 1.3.14 - 2013-05-16
